add docker-compose env